<resources>
    <string name="app_name">DigiCart</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="password_hint">Enter password</string>
    <string name="login_text"><u>Enter</u></string>
    <string name="signup_text"><u>Sign Up</u></string>
    <string name="forgotPass"><u>FORGOT PASSWORD?</u></string>
    <string name="skip"><u>SKIP</u></string>
    <string name="load"><u>LOAD</u></string>
    <string name="Login"><u>Login</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_description">Description</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_user_profile">UserProfile</string>
</resources>

