<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context="com.example.sunnny.productapp.MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="20"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/mobile_number"
        android:id="@+id/phoneText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/password_hint"
        android:id="@+id/passwordText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_text"
        android:gravity="center"
        android:onClick="logIn"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:id="@+id/login_clickable"
        />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Or"
         android:ems="10"
         android:layout_margin="5dp"
         android:gravity="center"
         />


    <Button
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/signup_text"
        android:gravity="center"
        android:onClick="signUp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:id="@+id/signup_clickable"
        />

     <LinearLayout
         android:layout_marginTop="16dp"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="wrap_content">

         <TextView
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:textStyle="bold"
             android:layout_height="36dp"
             android:onClick="forgotPass"
             android:text="@string/forgotPass"
             android:id="@+id/forgot_pass_txt"/>

         <TextView
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:textStyle="bold"
             android:layout_height="36dp"
             android:text="@string/skip"
             android:onClick="skip"
             android:id="@+id/skip_txt"/>

     </LinearLayout>

</LinearLayout>
