<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="3dp"
    android:background="@color/colorAccent"
    tools:context="com.example.sunnny.productapp.SignUpPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_height="match_parent">

        
        <EditText
            android:id="@+id/name_text"
            android:layout_margin="3dp"
            android:hint="Enter your name here"
            android:layout_width="match_parent"
            android:nextFocusUp="@id/name_text"
            android:nextFocusLeft="@id/name_text"
            android:layout_height="wrap_content"
            />


           <RadioGroup
               android:layout_margin="3dp"
               android:layout_width="wrap_content"
               android:orientation="horizontal"
               android:layout_height="wrap_content">

               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="MALE"
                   app:buttonTint="@color/colorPrimary"
                   android:id="@+id/male_rb"/>

               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="FEMALE"
                   app:buttonTint="@color/colorPrimary"
                   android:shadowColor="@color/colorPrimary"
                   android:id="@+id/female_rb"/>


           </RadioGroup>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:layout_margin="3dp"
            android:inputType="phone"
            android:id="@+id/signup_mobile"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_margin="3dp"
            android:inputType="textPassword"
            android:id="@+id/signUp_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Re-enter Password"
            android:layout_margin="3dp"
            android:inputType="textPassword"
            android:id="@+id/signup_re_enterPass"/>


        <Button
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:layout_height="@dimen/activity_text_field_size"
            android:id="@+id/signUP_button"
            android:onClick="SignUp"
            android:text="@string/signup_text"/>
    </LinearLayout>

</ScrollView>
